Updated the personal skills section to include programming

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">System Admin - Linux Tinkerer - All Around Nerd</p>
+      <p class="masthead-subheading font-weight-light mb-0">System Admin - Linux Tinkerer - Casual Programmer</p>
 
     </div>
   </header>
@@ -161,7 +161,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <h1 class="masthead-heading text-uppercase fa-1x mb-0">Personal Experience and Soft Skills</h1>
+                <h1 class="masthead-heading text-uppercase fa-1x mb-0">Personal Experience and Social Skills</h1>
 
               </div>
             </div>
@@ -171,11 +171,11 @@
 
       </div>
       <div class="text-center mt-4">
-          <a class="btn btn-xl btn-primary" href="onepagelist.html">
-            <i class="fas fa-link mr-2"></i>
-            Full List
-          </a>
-        </div>
+        <a class="btn btn-xl btn-primary" href="onepagelist.html">
+          <i class="fas fa-link mr-2"></i>
+          Full List
+        </a>
+      </div>
       <!-- /.row -->
 
     </div>
@@ -739,7 +739,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Personal Experience and Soft Skills
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Personal Experience and Social Skills
                 </h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
@@ -755,7 +755,16 @@
                 <!-- Portfolio Modal - Text -->
                 </p>
                 <div align=left>
-                  <div class="lead"><i class="fa fa-terminal"></i> Personal Experience</div>
+                  <div class="lead"><i class="fa fa-terminal"></i> Programming Languages</div>
+                  <p>
+                    <ul>
+                      <li>C# / .NET</li>
+                      <li>Java</li>
+                      <li>HTML 5 / JavaScript / CSS</li>
+                      <li>PowerShell / Windows Batch</li>
+                    </ul>
+                  </p>
+                  <div class="lead"><i class="fa fa-terminal"></i> Networking Experience</div>
                   <p>
                     <ul>
                       <li>Set up a home network utilizing Windows Server 2016</li>
@@ -775,7 +784,7 @@
                       <li>Use a Raspberry Pi for a variety of projects including a DNS server and VPN</li>
                     </ul>
                   </p>
-                  <div class="lead"><i class="fa fa-terminal"></i> Soft Skills</div>
+                  <div class="lead"><i class="fa fa-terminal"></i> Communication Skills</div>
                   <div class="row">
                     <div class="col-lg-6 ml-auto">
                       <p>
