--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                         efficient first-call resolution</li>
                       <li>Working with other equipment teams to troubleshoot and install 3rd party equipment</li>
                       <li>Document and reference tickets in CRM software (Dynamics 365)</li>
-                      <li>Submit extra projects to development for possible software addition</li>
+                      <li>Collaborate with the development team on creating software tools</li>
                     </ul>
                   </div>
                 </p>
