added extra info to KaVo job Description to include Programming

--- a/index.html
+++ b/index.html
@@ -406,6 +406,10 @@
                       <li>Working with other equipment teams to troubleshoot and install 3rd party equipment</li>
                       <li>Document and reference tickets in CRM software (Dynamics 365)</li>
                       <li>Collaborate with the development team on creating software tools</li>
+                      <ul>
+                        <li>Utilize PowerShell, C#, and Windows Batch to create automation tools</li>
+                        <li>Work with the Level 1 team to test and improve the software tools</li>
+                      </ul>
                     </ul>
                   </div>
                 </p>
