Updated the full list page with recently added changes to main page

--- a/onepagelist.html
+++ b/onepagelist.html
@@ -97,38 +97,37 @@
             <!-- Portfolio Modal - Text -->
             <p>
                 <div align=left>
+                   <ul>
+                    <li>Answer questions and resolve a variety of issues for dental practices across North America
+                    </li>
                     <ul>
-                        <li>Answer questions and resolve a variety of issues for dental practices across North
-                            America
-                        </li>
-                        <ul>
-                            <li>Assist customers with a variety of how-to questions such as importing/exporting
-                                images, and
-                                how to take xrays</li>
-                            <li>Troubleshoot network connections: ping tests, traceroute, telnet, firewall
-                                exceptions,
-                                speedtests</li>
-                            <li>Troubleshoot X-Ray equipment: Reinstall drivers, check for bad usb ports, and
-                                ship powered
-                                USB hubs if necessary</li>
-                            <li>Troubleshoot the software and fix any data corruption, or program misbehaviour
-                            </li>
-                        </ul>
-                        <li>Utilize Bomgar to provide remote assistance</li>
-                        <ul>
-                            <li>Software installation and upgrades on several machines</li>
-                            <li>Migrate data from one server to another</li>
-                            <li>Set up SQL Server database including instance creation and database file
-                                attachment</li>
-                        </ul>
-                        <li>Regularly collaborate with office IT, network technicians, and hardware specialists
-                            to provide
-                            efficient first-call resolution</li>
-                        <li>Working with other equipment teams to troubleshoot and install 3rd party equipment
-                        </li>
-                        <li>Document and reference tickets in CRM software (Dynamics 365)</li>
-                        <li>Submit extra projects to development for possible software addition</li>
+                      <li>Assist customers with a variety of how-to questions such as importing/exporting images, and
+                        how to take xrays</li>
+                      <li>Troubleshoot network connections: ping tests, traceroute, telnet, firewall exceptions,
+                        speedtests</li>
+                      <li>Troubleshoot X-Ray equipment: Reinstall drivers, check for bad usb ports, and ship powered
+                        USB hubs if necessary</li>
+                      <li>Troubleshoot the software and fix any data corruption, or program misbehaviour</li>
                     </ul>
+                    <li>Utilize Bomgar to provide remote assistance</li>
+                    <ul>
+                      <li>Software installation and upgrades on several machines</li>
+                      <li>Migrate data from one server to another</li>
+                      <li>Set up SQL Server database including instance creation and database file attachment</li>
+                    </ul>
+                    <li>Regularly collaborate with office IT, network technicians, and hardware specialists to provide
+                      efficient first-call resolution</li>
+                    <li>Working with other equipment teams to troubleshoot and install 3rd party equipment</li>
+                    <li>Document and reference tickets in CRM software (Dynamics 365)</li>
+                    <li>Create tools to simplify help desk tasks</li>
+                    <ul>
+                      <li>Installing software; copying, renaming, and modifying text files; performing SQL queries to
+                        modify and retrieve data.</li>
+                      <li>Create mini utility programs for flat-file and SQL data manipulation using C# and Powershell
+                      </li>
+                      <li>Create a note generation tool to standardize the note taking process</li>
+                    </ul>
+                  </ul>
                 </div>
             </p>
         </div>
@@ -416,25 +415,34 @@
                 <div class="lead"><i class="fa fa-terminal"></i> Personal Experience</div>
                 <p>
                     <ul>
-                        <li>Set up a home network utilizing Windows Server 2016</li>
-                        <ul>
-                            <li>Set up static IP address for several local devices</li>
-                            <li>Host DHCP Server to automatically assign local IP addresses</li>
-                            <li>Set up DNS server for fast reliable domain name resolution</li>
-                            <li>Utilize Active Directory to set user permissions</li>
-                            <li>Create group policy objects to control PC interactions and apply
-                                computer and user
-                                specific network settings</li>
-                            <li>Set up a file share system for hosting local data and backups</li>
-                        </ul>
-                        <li>Utilize port-forwarding technology to host game servers</li>
-                        <li>Clone Harddrives, duplicating partition tables and boot records</li>
-                        <li>Use a variety of Linux distributions on a regular basis: Ubuntu, Fedora,
-                            openSUSE, Manjaro,
-                            Pop_OS!, Debian</li>
-                        <li>Use a Raspberry Pi for a variety of projects including a DNS server and
-                            VPN</li>
+                    <li>Set up a home network utilizing Windows Server 2016</li>
+                    <ul>
+                      <li>Set up static IP address for several local devices</li>
+                      <li>Host DHCP Server to automatically assign local IP addresses</li>
+                      <li>Set up DNS server for fast reliable domain name resolution</li>
+                      <li>Utilize Active Directory to set user ACLs</li>
+                      <li>Create group policy objects to control PC interactions and apply computer and user
+                        specific network settings</li>
+                      <li>Set up a file share system for hosting local data and backups</li>
                     </ul>
+                    <li>Host a FreeNAS Unix machine with multiple containers and virtual machines to do the following
+                    </li>
+                    <ul>
+                      <li>File server for my home network using SMB and NFS</li>
+                      <li>Transmission server</li>
+                      <li>Minecraft Game Server</li>
+                      <li>Plex Media Server</li>
+                      <li>VPN from external network to internal network</li>
+                      <li>VPN from internal network to Hosted Service</li>
+                    </ul>
+                    <li>Install and test multiple Linux distributions including Fedora, Ubuntu, and Red Hat</li>
+                    <li>Installed Arch numerous times learning about partitions and
+                      mount points</li>
+                    <li>Networked a printer utilizing a mail server to scan to email</li>
+                    <li>Edit IP tables to ensure proper flow of network traffic through subnets and VPNs</li>
+                    <li>Utilize Cron jobs to perform backups of Linux/Unix systems.</li>
+                    <li>Restore ZFS snapshots, and rebuild RAID Arrays</li>
+                  </ul>
                 </p>
                 <div class="lead"><i class="fa fa-terminal"></i> Soft Skills</div>
                 <div class="row">
