updated main header

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">System Admin - Linux Tinkerer - Casual Programmer</p>
+      <p class="masthead-subheading font-weight-light mb-0">System Admin - Linux Enthusiast - Casual Programmer</p>
 
     </div>
   </header>
