--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <h1 class="masthead-heading text-uppercase fa-1x mb-0">Work History:<br>Carestream Dental</h1>
               </div>
             </div>
-            <img class="img-fluid" src="img/icons/briefcase3plusbackground.png" alt="">
+            <img class="img-fluid" src="img/carestream.png" alt="">
           </div>
         </div>
 
