updated publix background and added walmart logo

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <h1 class="masthead-heading text-uppercase fa-1x mb-0">Work History:<br>Publix</h1>
               </div>
             </div>
-            <img class="img-fluid" src="img/icons/briefcase4plusbackground.png" alt="">
+            <img class="img-fluid" src="img/publix.png" alt="">
           </div>
         </div>
 
@@ -140,7 +140,7 @@
                 <h1 class="masthead-heading text-uppercase fa-1x mb-0">Work History:<br>Wal-Mart</h1>
               </div>
             </div>
-            <img class="img-fluid" src="img/icons/briefcase2plusbackground.png" alt="">
+            <img class="img-fluid" src="img/walmart.png" alt="">
           </div>
         </div>
 
