updated walmart and kavo icons to include more padding

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <!-- <i class="fas fa-plus fa-3x"></i> -->
               </div>
             </div>
-            <img class="img-fluid" src="img/Kavo.png" alt="">
+            <img class="img-fluid" src="img/kavo.png" alt="">
           </div>
         </div>
 
