updated personal experience icon

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
               </div>
             </div>
-            <img class="img-fluid" src="img/icons/gearwithperson.png" alt="">
+            <img class="img-fluid" src="img/personal.png" alt="">
           </div>
         </div>
 
@@ -336,8 +336,12 @@
   <!-- Copyright Section -->
   <section class="copyright py-4 text-center text-white">
     <div class="container">
-      <small>Copyright &copy; Joshua Bagwell 2019</small>
+      <small>Copyright &copy; Joshua Bagwell 2020</small>
+
     </div>
+    <div>
+      <small>Some icons made from <a href="http://www.onlinewebfonts.com/icon">Icon Fonts</a> is licensed by CC BY 3.0</small>
+      </div>
   </section>
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
