updated the school image

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <h1 class="masthead-heading text-uppercase fa-1x mb-0">Education and Certification</h1>
               </div>
             </div>
-            <img class="img-fluid" src="img/icons/degreeplusbackground.png" alt="">
+            <img class="img-fluid" src="img/school.png" alt="">
           </div>
         </div>
 
