--- a/index.html
+++ b/index.html
@@ -201,9 +201,10 @@
       <!-- <div class="row"> -->
       <!-- <div class="col-lg-4 ml-auto"> -->
       <div class="lead" align=center>
-        <p class="lead">The purpose of my site is to showcase a small portion of my abilities while launching myself
-          into the future of technology. With my incredible passion for IT and Linux, I would make a valuable asset to
-          any team.</p>
+        <p class="lead">I have several years of customer service and helpdesk experience, but I want to do more.
+          I have several years of personal experience with Windows, Linux and networking, and I am aiming for a role as
+          a System Administrator. With my incredible passion for networking and computing, I would make a valuable asset
+          to any team.</p>
       </div>
       <!-- <div class="col-lg-4 mr-auto">
             <p class="lead"></p>
@@ -340,8 +341,9 @@
 
     </div>
     <div>
-      <small>Some icons made from <a href="http://www.onlinewebfonts.com/icon">Icon Fonts</a> is licensed by CC BY 3.0</small>
-      </div>
+      <small>Some icons made from <a href="http://www.onlinewebfonts.com/icon">Icon Fonts</a> is licensed by CC BY
+        3.0</small>
+    </div>
   </section>
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
