Changed Job Title for Kavo

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Technical Solutions Analyst<br>Mar
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Technical Support Representative<br>Mar
                   2019 -> Current</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
