--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">System Admin - Linux Enthusiast - Casual Programmer</p>
+      <p class="masthead-subheading font-weight-light mb-0">Aspiring System Admin - Linux Enthusiast - Casual Programmer</p>
 
     </div>
   </header>
@@ -170,12 +170,12 @@
         </div>
 
       </div>
-      <div class="text-center mt-4">
+      <!-- div class="text-center mt-4">
         <a class="btn btn-xl btn-primary" href="onepagelist.html">
           <i class="fas fa-link mr-2"></i>
           Full List
         </a>
-      </div>
+      </div> -->
       <!-- /.row -->
 
     </div>
