Updated about section, and paper resume

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Aspiring System Admin - Linux Enthusiast - Casual Programmer</p>
+      <p class="masthead-subheading font-weight-light mb-0">Aspiring System Admin - Linux Enthusiast - Casual Programmer
+      </p>
 
     </div>
   </header>
@@ -201,10 +202,19 @@
       <!-- <div class="row"> -->
       <!-- <div class="col-lg-4 ml-auto"> -->
       <div class="lead" align=center>
-        <p class="lead">I have several years of customer service and helpdesk experience, but I want to do more.
+        <p class="lead">
+          This website is a way to showcase my professional experience as well as my personal accomplishments. I have 5
+          years of face to face Customer Service experience, and I have 3 years experience in a technical support role.
+          I have developed several tools to make my life easier both at work and at home. My philosophy is “work
+          smarter, not harder”. As I progress in my career and learn more skills, I will showcase
+          them here. I also use Linux in my every day life and hope to make it a career. At the bottom of this site is
+          my GitHub page. I will continue to update it as I develop more projects. Feel free to use the form below to
+          contact me for any reason.
+        </p>
+        <!-- <p class="lead">I have several years of customer service and helpdesk experience, but I want to do more.
           I have several years of personal experience with Windows, Linux and networking, and I am aiming for a role as
           a System Administrator. With my incredible passion for networking and computing, I would make a valuable asset
-          to any team.</p>
+          to any team.</p> -->
       </div>
       <!-- <div class="col-lg-4 mr-auto">
             <p class="lead"></p>
@@ -370,7 +380,8 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Technical Support Representative<br>Mar
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Technical Support
+                  Representative<br>Mar
                   2019 -> Current</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
@@ -388,34 +399,29 @@
                 <p>
                 <div align=left>
                   <ul>
-                    <li>Answer questions and resolve a variety of issues for dental practices across North America
-                    </li>
+                    <li>Assist customers with a variety of how-to questions such as importing/exporting images, and
+                      how to take X-Rays within the software</li>
+                    <li>Install and update software on several machines</li>
+                    <li>Migrate data from one server to another</li>
+                    <li>Set up SQL Server database including instance creation and database file attachment</li>
+                    <li>Troubleshoot a variety of issues</li>
                     <ul>
-                      <li>Assist customers with a variety of how-to questions such as importing/exporting images, and
-                        how to take xrays</li>
-                      <li>Troubleshoot network connections: ping tests, traceroute, telnet, firewall exceptions,
-                        speedtests</li>
-                      <li>Troubleshoot X-Ray equipment: Reinstall drivers, check for bad usb ports, and ship powered
-                        USB hubs if necessary</li>
-                      <li>Troubleshoot the software and fix any data corruption, or program misbehaviour</li>
+                      <li>SQL and Network connections: confirming proper file permissions, checking open
+                        firewall ports, and verifying database integrity</li>
+                      <li>X-Ray equipment: Re-install drivers, check for bad USB ports, and process
+                        warranty replacements when necessary</li>
+                      <li>The software: discover and resolve any data corruption, or program misbehavior</li>
                     </ul>
-                    <li>Utilize Bomgar to provide remote assistance</li>
-                    <ul>
-                      <li>Software installation and upgrades on several machines</li>
-                      <li>Migrate data from one server to another</li>
-                      <li>Set up SQL Server database including instance creation and database file attachment</li>
-                    </ul>
-                    <li>Regularly collaborate with office IT, network technicians, and hardware specialists to provide
-                      efficient first-call resolution</li>
                     <li>Working with other equipment teams to troubleshoot and install 3rd party equipment</li>
-                    <li>Document and reference tickets in CRM software (Dynamics 365)</li>
-                    <li>Create tools to simplify help desk tasks</li>
+                    <li>Document and reference tickets in CRM software (Dynamics 365)</i>
+                    <li>Develop programs using a variety of languages to simplify help desk tasks</li>
                     <ul>
                       <li>Installing software; copying, renaming, and modifying text files; performing SQL queries to
                         modify and retrieve data.</li>
-                      <li>Create mini utility programs for flat-file and SQL data manipulation using C# and Powershell
+                      <li>Mini utility programs for flat-file and SQL data manipulation
                       </li>
-                      <li>Create a note generation tool to standardize the note taking process</li>
+                      <li>A note generation tool to standardize the note taking process</li>
+                      <li>Scripts that automate repetitive tasks such as creating a case and opening programs</li>
                     </ul>
                   </ul>
                 </div>
@@ -474,9 +480,8 @@
                       <li>How to process insurance claims</li>
                     </ul>
                     <li>Troubleshoot a variety of database corruption issues</li>
-                    <li>Perform basic network troubleshooting: ping tests, telnet, and speedtests</li>
-                    <li>Perform Database correction utilities to rectify corruption or misnumbering</li>
-                    <li>Provide remote assistance utilizing Bomgar technology</li>
+                    <li>Perform basic network troubleshooting: ping tests, telnet, and speed-tests</li>
+                    <li>Run database correction utilities to rectify corruption or miss-numbering</li>
                     <li>Perform software upgrades and server migrations</li>
                   </ul>
                   </p>
@@ -488,12 +493,12 @@
                       <li>Perform advanced network troubleshooting: LAN speed tests, DNS/IP correction, firewall
                         port exceptions, latency testing, Duplex settings, NIC power management</li>
                       <li>Connect to Citrix cloud servers to perform database maintenance</li>
-                      <li>Provide SQL database correction by implementing queries to resolve corruption</li>
+                      <li>Perform SQL database correction by implementing queries to resolve corruption</li>
                     </ul>
                     <li>Process and resolve escalation cases in a proprietary CRM Program</li>
                     <li>Provide training for new employees</li>
-                    <li>Write and distribute Batch scripts to simplify tasks: registry edits, backups, migrations,
-                      etc</li>
+                    <li>Write and distribute Batch scripts to simplify tasks: registry edits, backups, migrations, etc
+                    </li>
                   </ul>
                   </p>
                 </div>
@@ -613,7 +618,7 @@
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <h2>Wal-Mart</h2><br>
-                <strong>Process Monetary Transactions at Point of Sale in a Retail Enviornment</strong>
+                <strong>Process Monetary Transactions at Point of Sale in a Retail Environment</strong>
                 <!-- <img class="img-fluid rounded mb-5" src="img/portfolio/game.png" alt=""> -->
                 <!-- Portfolio Modal - Text -->
                 <p>
@@ -825,7 +830,7 @@
                     <div class="col-lg-6 mr-auto">
                       <p>
                       <ul>
-                        <li>Adaptibility</li>
+                        <li>Adaptability</li>
                         <li>Logical Reasoning</li>
                         <li>Self Discipline</li>
                         <li>Creativity</li>
