reworded about section

--- a/index.html
+++ b/index.html
@@ -206,10 +206,8 @@
           This website is a way to showcase my professional experience as well as my personal accomplishments. I have 5
           years of face to face Customer Service experience, and I have 3 years experience in a technical support role.
           I have developed several tools to make my life easier both at work and at home. My philosophy is “work
-          smarter, not harder”. As I progress in my career and learn more skills, I will showcase
-          them here. I also use Linux in my every day life and hope to make it a career. At the bottom of this site is
-          my GitHub page. I will continue to update it as I develop more projects. Feel free to use the form below to
-          contact me for any reason.
+          smarter, not harder”. I use Linux in my every day life and hope to make it a career. As I learn more about
+          system administration, and automation, I will update this site. At the bottom of this site is my GitHub page that I will continue to update as I develop more projects. Feel free to use the form below to contact me for any reason.
         </p>
         <!-- <p class="lead">I have several years of customer service and helpdesk experience, but I want to do more.
           I have several years of personal experience with Windows, Linux and networking, and I am aiming for a role as
