Fixed grammar errors on resume and website Added a few more relevant tasks for CS role

--- a/index.html
+++ b/index.html
@@ -207,7 +207,9 @@
           years of face to face Customer Service experience, and I have 3 years experience in a technical support role.
           I have developed several tools to make my life easier both at work and at home. My philosophy is “work
           smarter, not harder”. I use Linux in my every day life and hope to make it a career. As I learn more about
-          system administration, and automation, I will update this site. At the bottom of this site is my GitHub page that I will continue to update as I develop more projects. Feel free to use the form below to contact me for any reason.
+          system administration, and automation, I will update this site. At the bottom of this site is my GitHub page
+          that I will continue to update as I develop more projects. Feel free to use the form below to contact me for
+          any reason.
         </p>
         <!-- <p class="lead">I have several years of customer service and helpdesk experience, but I want to do more.
           I have several years of personal experience with Windows, Linux and networking, and I am aiming for a role as
@@ -562,13 +564,13 @@
                     <li>Lead a team of associates and maintain the front end</li>
                     <ul>
                       <li>Maintain a clean, safe, and organized working environment</li>
-                      <li>Organize workflow and ensure that associates understand their duties or delegated
-                        tasks
-                      </li>
-                      <li>Enforce store procedures regarding coupons, gift cards, sales items, and alcohol or
-                        cigarettes</li>
+                      <li>Delegate tasks to the team that are completed throughout the day</li>
+                      <li>Organize workflow and ensure that associates understand their duties</li>
+                      <li>Create employee schedules to accommodate busy store hours</li>
                       <li>Monitor associate productivity and provide constructive feedback and coaching</li>
+                      <li>Ensure store policies are followed according to company guidelines</li>
                     </ul>
+                    <li>Build rapport, listen, and manage customer complaints/questions</li>
                     <li>Balance the back office safe and generate reports on credit, debit, and cash sales</li>
                     <li>Write and process bank deposit slips</li>
                     <li>Issue refunds and exchanges while resolving complaints</li>
