removed '-' from KaVo-Kerr

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <h1 class="masthead-heading text-uppercase fa-1x mb-0">Work History:<br>KaVo-Kerr</h1>
+                <h1 class="masthead-heading text-uppercase fa-1x mb-0">Work History:<br>KaVo Kerr</h1>
                 <!-- <i class="fas fa-plus fa-3x"></i> -->
               </div>
             </div>
@@ -392,7 +392,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <h2>KaVo-Kerr</h2><br>
+                <h2>KaVo Kerr</h2><br>
                 <strong>Provide Level 1 Software Support in a Call Center Environment</strong>
                 <!-- <img class="img-fluid rounded mb-5" src="img/portfolio/cabin.png" alt=""> -->
                 <!-- Portfolio Modal - Text -->
