Adjusted Walmart description

--- a/index.html
+++ b/index.html
@@ -639,10 +639,13 @@
                   <div class="lead"><i class="fa fa-terminal"></i> Customer Service Associate</div>
                   <p>
                   <ul>
+                    <li>Pleasantly deal with customers to ensure satisfaction</li>
                     <li>Process returns and check to see if items are damaged</li>
                     <li>Cash checks, process wire transfers, and issue money orders</li>
-                    <li>Pleasantly deal with customers to ensure satisfaction</li>
-                    <li>Answer customers' questions and get a manager if answer doesn't solve issue</li>
+                    <li>Assist other departments when needed</li>
+                    <li>Work with other departments to help resolve customer issues</li>
+                    <li>Answer customers' questions and attempt to de-escalate an issue before management gets involved
+                    </li>
                   </ul>
                   </p>
                 </div>
