removed irrelevent information

--- a/index.html
+++ b/index.html
@@ -709,14 +709,6 @@
                 <p>
                 <div align=left>
                   <div class="lead">
-                    <i class="fa fa-terminal"></i> Western Governors University | Online
-                  </div>
-                  <p class="tab">Cloud and Systems Administration | Expected Graduation date: June 2022<br></p>
-                </div>
-                </p>
-                <p>
-                <div align=left>
-                  <div class="lead">
                     <i class="fa fa-terminal"></i> Kennesaw State University | Marietta, GA
                   </div>
                   <p class="tab">Computer Science | Aug 2014 - Feb 2017<br></p>
@@ -771,7 +763,7 @@
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <!-- <img class="img-fluid rounded mb-5" src="img/portfolio/submarine.png" alt=""> -->
-                <strong>Skills and Technical Expertise not Necessarily Gained Through Work Experience</strong>
+                <strong>Other Skills and Technical Expertise</strong>
                 <!-- Portfolio Modal - Text -->
                 </p>
                 <div align=left>
