Updated job title

--- a/index.html
+++ b/index.html
@@ -388,8 +388,8 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Technical Support
-                  Representative<br>Mar
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Technical Solutions
+                  Analyst<br>Mar
                   2019 -> Oct 2020</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
