updated Premier to include Linux and scripting

--- a/index.html
+++ b/index.html
@@ -795,42 +795,30 @@
                     <li>Work with a small team to manage and support servers and network infrastructure across 20+
                       locations.</li>
 
-                    <li>Create and assign Group Policies to change settings, deploy software installs, and enforce
-                      security policies</li>
-
+                      <li>Manage several Webservers running on Linux with Apache, and Windows with IIS</li>
+                      <li>Manage User access to several Linux servers by enforcing SSH key logins with 2fa protection.</li>
                     <li>Manage mobile devices with Intune by applying configuration profiles to restrict usage, install
                       apps, and change system settings</li>
-
                     <li>Ensure system updates are deployed in a timely fashion to protect against latest vulnerabilities
                     </li>
-
-                    <li>Assist end users and C-level executives in a Windows environment</li>
 
                     <li>Manage end users' access to a variety of network resources including shared storage, and remote
                       application logins</li>
 
                     <li>Create and maintain internal IT documentation as well as end user support tutorials</li>
 
-                    <li>Write and deploy scripts to automate tasks and push system configurations.</li>
+                    <li>Write and deploy scripts using Powerwshell to automate tasks, push system configurations and install applications</li>
                     <li>Consulted and assisted with implementing a complete redesign of the entire IT procedures
                       services, and infrastructure.</li>
 
                     <li>Completely revamped the documentation process for the IT department including server
                       configurations and end user tutorials.</li>
 
-                    <li>Configured and deployed a variety of new systems including patch management, help desk, and
-                      asset management.</li>
-
                     <li>Helped recover from a ransomware attack by deploying decryption keys and restoring backups.
                     </li>
 
-                    <li>Deployed a full managed anti-virus security suite to all machines in the company.</li>
-
                     <li>Assisted with a full email migration from Rackspace to Exchange 365 by deploying restoration
                       scripts, and providing end users adequate documentation on how to use the new system.</li>
-
-                    <li>Implemented Two-Factor-Authentication throughout the company to protect a variety of login
-                      types including email and remote access.</li>
 
                     <li>Created a GUI tool to automatically create and manage end user accounts, increasing efficiency by 90%</li>
                   </ul>
