--- a/index.html
+++ b/index.html
@@ -794,9 +794,11 @@
                   <ul>
                     <li>Work with a small team to manage and support servers and network infrastructure across 20+
                       locations.</li>
-
+                      <li>Install and maintain several Linux machines running Redhat and Ubuntu. Tasks include script development and deployment, resource monitoring, and user access management.
+                      </li>
                       <li>Manage several Webservers running on Linux with Apache, and Windows with IIS</li>
-                      <li>Manage User access to several Linux servers by enforcing SSH key logins with 2fa protection.</li>
+                      <li>Utilize best security practices by limiting resource access with security groups, SSH keys and SSL certs, and 2fa.
+                      </li>
                     <li>Manage mobile devices with Intune by applying configuration profiles to restrict usage, install
                       apps, and change system settings</li>
                     <li>Ensure system updates are deployed in a timely fashion to protect against latest vulnerabilities
@@ -804,8 +806,6 @@
 
                     <li>Manage end users' access to a variety of network resources including shared storage, and remote
                       application logins</li>
-
-                    <li>Create and maintain internal IT documentation as well as end user support tutorials</li>
 
                     <li>Write and deploy scripts using Powerwshell to automate tasks, push system configurations and install applications</li>
                     <li>Consulted and assisted with implementing a complete redesign of the entire IT procedures
