--- a/index.html
+++ b/index.html
@@ -794,8 +794,7 @@
                   <ul>
                     <li>Work with a small team to manage and support servers and network infrastructure across 20+
                       locations.</li>
-                      <li>Install and maintain several Linux machines running Redhat and Ubuntu. Tasks include script development and deployment, resource monitoring, and user access management.
-                      </li>
+                      <li>Install and maintain several Linux machines running Redhat and Ubuntu. Tasks include script development and deployment, resource monitoring, and user access management.</li>
                       <li>Manage several Webservers running on Linux with Apache, and Windows with IIS</li>
                       <li>Utilize best security practices by limiting resource access with security groups, SSH keys and SSL certs, and 2fa.
                       </li>
